June 1, 2023   - **v4.0.7**
                 * Fixed an error related with the shifts(shifts were not being calculated)
                 * Cheking the shifts in a test
                 * Taking the rlnOriginXAngst, rlnOriginYAngst and rlnOriginZAngst
                   values from .star file generated by pyem library and using them to
                   calculate the particles shifts

May 26, 2023   - **v4.0.6**
                 Compatibility with cryoSPARC v4.2.1
                 Plugin operation in a cluster
                 Fixed an installation error

May 26, 2023   - **v4.0.5**
                 Plugin operation in a cluster
                 Fixed an installation error
March 16, 2023 -  **v4.0.4**
                 Compatibility with cryoSPARC v4.2.1

March 1, 2023 -  **v4.0.3**
                 Compatibility with cryoSPARC v4.2
                 Fixed an error importing volumes with halves
                 Fixed an error launching the protocols viewers
Jan 24, 2023 -  **v4.0.2**
                - Compatibility with v4.1.2 CS version
                - Creating an environment for pyem package
                - 3D homogeneous refinement(Legacy), 3D non-uniform refinement(Legacy) and Naive local refinement(Legacy) protocols are deprecated

Jan 18, 2023 -  - Compatibility with v4.1.1 CS version
                **v4.0.1**
Nov 8, 2022  -  - Compatibility with v4.0.x CS version
                **v4.0.0**

Oct 25, 2022  - Hot fixes
                **v3.3.19**
                * **fixed**   : Fixed an error related to Phase Randomized Masket Map calculation


Sept 7, 2022  - Adding functionalities (v3.3.18)
                **v3.3.18**
                -----------
                * **new** *   : Allow to import .cs particles files

Sept 1, 2022  - Fixing errors (v3.3.17)
                **v3.3.17**
                -----------
                * **fixed**    : Allow 31 or more classes in the 3D classification protocol


Jun 23, 2022  - Fixing errors (v3.3.16)